Fix build and rename ShenandoahBarrierSet::oop_load_from_native_barrier

XMLWordPrintable

    • gc
    • b20

      x86_64, Windows:

      * For target hotspot_variant-server_libjvm_objs_BUILD_LIBJVM_link:
         Creating library c:/cygwin64/home/windows/worker/jdkX-windows/build/build/windows-x86_64-server-fastdebug/hotspot/variant-server/libjvm/objs/jvm.lib and object c:/cygwin64/home/windows/worker/jdkX-windows/build/build/windows-x86_64-server-fastdebug/hotspot/variant-server/libjvm/objs/jvm.exp
      sparsePRT.obj : error LNK2001: unresolved external symbol "public: class oopDesc * __cdecl ShenandoahBarrierSet::oop_load_from_native_barrier(class oopDesc *,unsigned int *)" (?oop_load_from_native_barrier@ShenandoahBarrierSet@@QEAAPEAVoopDesc@@PEAV2@PEAI@Z)
      tenuredGeneration.obj : error LNK2001: unresolved external symbol "public: class oopDesc * __cdecl ShenandoahBarrierSet::oop_load_from_native_barrier(class oopDesc *,unsigned int *)" (?oop_load_from_native_barrier@ShenandoahBarrierSet@@QEAAPEAVoopDesc@@PEAV2@PEAI@Z)
      shenandoahTraversalGC.obj : error LNK2001: unresolved external symbol "public: class oopDesc * __cdecl ShenandoahBarrierSet::oop_load_from_native_barrier(class oopDesc *,unsigned int *)" (?oop_load_from_native_barrier@ShenandoahBarrierSet@@QEAAPEAVoopDesc@@PEAV2@PEAI@Z)
      shenandoahVerifier.obj : error LNK2001: unresolved external symbol "public: class oopDesc * __cdecl ShenandoahBarrierSet::oop_load_from_native_barrier(class oopDesc *,unsigned int *)" (?oop_load_from_native_barrier@ShenandoahBarrierSet@@QEAAPEAVoopDesc@@PEAV2@PEAI@Z)
      space.obj : error LNK2001: unresolved external symbol "public: class oopDesc * __cdecl ShenandoahBarrierSet::oop_load_from_native_barrier(class oopDesc *,unsigned int *)" (?oop_load_from_native_barrier@ShenandoahBarrierSet@@QEAAPEAVoopDesc@@PEAV2@PEAI@Z)
      spaceDecorator.obj : error LNK2001: unresolved external symbol "public: class oopDesc * __cdecl ShenandoahBarrierSet::oop_load_from_native_barrier(class oopDesc *,unsigned int *)" (?oop_load_from_native_barrier@ShenandoahBarrierSet@@QEAAPEAVoopDesc@@PEAV2@PEAI@Z)
      shenandoahHeap.obj : error LNK2001: unresolved external symbol "public: class oopDesc * __cdecl ShenandoahBarrierSet::oop_load_from_native_barrier(class oopDesc *,unsigned int *)" (?

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: