8232674: Fix build and rename ShenandoahBarrierSet::oop_load_from_native_barrier

Reviewed-by: zgu